--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Environment Variables
-.env
+# .env is now committed for easy deployment
 .env.local
 .env.*.local
-.env.docker
+.env.backup
 
 # Docker
 docker-compose.override.yml
