--- a/EpilepticAI-web/.env.production
+++ b/EpilepticAI-web/.env.production
@@ -1,5 +1,6 @@
 # Production Environment Variables (Docker)
-VITE_API_BASE_URL=http://localhost
+# Empty string means relative URL - Nginx will proxy /api/ to backend
+VITE_API_BASE_URL=
 VITE_API_VERSION=v1
 VITE_API_TIMEOUT=30000
 VITE_ENV=production
