Enable SMS alerts and add Twilio configuration to environment

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -66,6 +66,12 @@ services:
       - ENVIRONMENT=production
       - DEBUG=false
       - BACKEND_CORS_ORIGINS=["https://aivora.fojas.ai", "http://aivora.fojas.ai"]
+      - ENABLE_SMS_ALERTS=${ENABLE_SMS_ALERTS}
+      - ENABLE_PUSH_NOTIFICATIONS=${ENABLE_PUSH_NOTIFICATIONS}
+      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
+      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
+      - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER}
+      - PREDICTION_THRESHOLD=${PREDICTION_THRESHOLD}
     depends_on:
       postgres:
         condition: service_healthy
