--- a/.env
+++ b/.env
@@ -16,9 +16,14 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 PREDICTION_THRESHOLD=0.7
 
 # Alerts Configuration
-ENABLE_SMS_ALERTS=false
+ENABLE_SMS_ALERTS=true
 ENABLE_PUSH_NOTIFICATIONS=true
 ALERT_COOLDOWN_MINUTES=15
+
+# Twilio Configuration
+TWILIO_ACCOUNT_SID=ACc2777f161401896224383ff0b8942eeb
+TWILIO_AUTH_TOKEN=ba2b59b05f3942bc4182f619e2a2d854
+TWILIO_PHONE_NUMBER=+17817468071
 
 # Environment
 ENVIRONMENT=production
